--- a/on_pull_request.yml
+++ b/on_pull_request.yml
@@ -1,45 +1,34 @@
-name: Python Pull Request Workflow
+name: Polly Audio Conversion
 
 on:
   pull_request:
     branches:
-      - main  # Only trigger if PR targets 'main' branch
+      - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install boto3
-          
-
-      - name: Run tests
-        run: |
-          pytest
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # or your preferred region
+          aws-region: us-east-1
 
-      - name: Run Polly script
-        run: python your_script.py  # this generates polly-audio/beta.mp3
-
-      - name: Upload MP3 output
-        uses: actions/upload-artifact@v4
-        with:
-          name: polly-audio
-          path: polly-audio/beta.mp3
+      - name: Run Polly synthesis script
+        run: python3 Synthesize.py
