--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -18,14 +18,20 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: pip install boto3
+
+    - name: Install AWS CLI
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
 
     - name: Run Polly synthesize script
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: 'us-east-1'  # change if your region differs
+        AWS_DEFAULT_REGION: 'us-east-1'
       run: python Synthesize.py
 
     - name: Upload MP3 to S3 (Prod)
@@ -33,5 +39,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: 'us-east-1'
-      run: |
-        aws s3 cp output.mp3 s3://mypollyprojectbucketjcv/polly-audio/prod.mp3
+      run: aws s3 cp output.mp3 s3://mypollyprojectbucketjcv/polly-audio/prod.mp3
