--- a/.github/workflows/on_merge.yml
+++ b/.github/workflows/on_merge.yml
@@ -18,16 +18,8 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: pip install boto3
-
-    - name: Install AWS CLI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y unzip curl
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
 
     - name: Run Polly synthesize script
       env:
